@startuml

title __STOCKEXCHANGEMODEL's Class Diagram__\n

  namespace com.StockExchangeModel {
    class com.StockExchangeModel.Demo {
    }
    class com.StockExchangeModel.Main {
    }
    namespace StockExchange {
      class com.StockExchangeModel.StockExchange.StockExchange {
      }
      namespace Company {
        class com.StockExchangeModel.StockExchange.Company.Company {
        }
        class com.StockExchangeModel.StockExchange.Company.CompanyActionHandler {
        }
        class com.StockExchangeModel.StockExchange.Company.Stock {
        }
      }
      namespace Interpreter {
        class com.StockExchangeModel.StockExchange.Interpreter.Action {
        }
        abstract class com.StockExchangeModel.StockExchange.Interpreter.ActionHandler {
        }
        class com.StockExchangeModel.StockExchange.Interpreter.Interpreter {
        }
        class com.StockExchangeModel.StockExchange.Interpreter.Parser {
        }
      }
      namespace Order {
        class com.StockExchangeModel.StockExchange.Order.Order {
        }
        class com.StockExchangeModel.StockExchange.Order.OrderActionHandler {
        }
        class com.StockExchangeModel.StockExchange.Order.Transaction {
        }
        class com.StockExchangeModel.StockExchange.Order.Type {
        }
      }
      namespace StockAnalyser {
        class com.StockExchangeModel.StockExchange.StockAnalyser.AnalysableStock {
        }
        class com.StockExchangeModel.StockExchange.StockAnalyser.StockAnalyser {
        }
      }
      namespace Trader {
        class com.StockExchangeModel.StockExchange.Trader.Trader {
        }
        class com.StockExchangeModel.StockExchange.Trader.TraderActionHandler {
        }
      }
    }
  }

  com.StockExchangeModel.StockExchange.Company.Company o-- com.StockExchangeModel.StockExchange.Company.Stock : stock
  com.StockExchangeModel.StockExchange.Company.CompanyActionHandler -up-|> com.StockExchangeModel.StockExchange.Interpreter.ActionHandler
  com.StockExchangeModel.StockExchange.Interpreter.Action o-- com.StockExchangeModel.StockExchange.Interpreter.ActionHandler.ActionType : actionType
  com.StockExchangeModel.StockExchange.Interpreter.ActionHandler o-- com.StockExchangeModel.StockExchange.StockExchange : context
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter -up-|> com.StockExchangeModel.StockExchange.Interpreter.Parser
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter o-- com.StockExchangeModel.StockExchange.Company.CompanyActionHandler : companyActionHandler
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter o-- com.StockExchangeModel.StockExchange.StockExchange : context
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter o-- com.StockExchangeModel.StockExchange.Order.OrderActionHandler : orderActionHandler
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter o-- com.StockExchangeModel.StockExchange.Trader.TraderActionHandler : traderActionHandler
  com.StockExchangeModel.StockExchange.Order.Order o-- com.StockExchangeModel.StockExchange.Company.Stock : stock
  com.StockExchangeModel.StockExchange.Order.Order o-- com.StockExchangeModel.StockExchange.Order.Type : type
  com.StockExchangeModel.StockExchange.Order.Order o-- com.StockExchangeModel.StockExchange.Trader.Trader : trader
  com.StockExchangeModel.StockExchange.Order.OrderActionHandler -up-|> com.StockExchangeModel.StockExchange.Interpreter.ActionHandler
  com.StockExchangeModel.StockExchange.Order.Transaction -up-|> com.StockExchangeModel.StockExchange.Order.Order
  com.StockExchangeModel.StockExchange.Order.Transaction o-- com.StockExchangeModel.StockExchange.Trader.Trader : buyer
  com.StockExchangeModel.StockExchange.Order.Transaction o-- com.StockExchangeModel.StockExchange.Trader.Trader : seller
  com.StockExchangeModel.StockExchange.Order.Type o-- com.StockExchangeModel.StockExchange.Order.Type.TypeEnum : type
  com.StockExchangeModel.StockExchange.StockAnalyser.AnalysableStock .up.|> java.lang.Comparable
  com.StockExchangeModel.StockExchange.StockAnalyser.AnalysableStock -up-|> com.StockExchangeModel.StockExchange.Company.Stock
  com.StockExchangeModel.StockExchange.StockAnalyser.StockAnalyser -up-|> com.StockExchangeModel.StockExchange.Interpreter.Parser
  com.StockExchangeModel.StockExchange.Trader.TraderActionHandler -up-|> com.StockExchangeModel.StockExchange.Interpreter.ActionHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
